<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page6">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="717dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="28dp"
        android:scrollbarStyle="insideInset"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/bouttonnood1"
                android:layout_width="129dp"
                android:layout_height="38dp"
                android:text="@string/approved"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="73dp" />

            <CheckBox
                android:id="@+id/checkBox4nood"
                android:layout_width="242dp"
                android:layout_height="48dp"
                android:text="@string/executed_on_the_sis_system"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="79dp"
                tools:layout_editor_absoluteY="139dp" />

            <RadioButton
                android:id="@+id/radioButton4nood"
                android:layout_width="195dp"
                android:layout_height="36dp"
                android:text="@string/not_approved_reasons"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="245dp" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="549dp"
                android:layout_height="251dp"
                android:ems="10"
                android:inputType="textMultiLine"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="323dp" />

            <Button
                android:id="@+id/button29noon"
                android:layout_width="235dp"
                android:layout_height="48dp"
                android:background="@color/color2"
                android:text="@string/submit"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="35dp"
                tools:layout_editor_absoluteY="619dp" />

            <Button
                android:id="@+id/button30noon"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:background="@color/color2"
                android:text="@string/cancel"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="425dp"
                tools:layout_editor_absoluteY="617dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>