<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="717dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="28dp"
        android:scrollbarStyle="insideInset"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editTextnood"
                android:layout_width="230dp"
                android:layout_height="54dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/dear"
                tools:ignore="HardcodedText,MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="100dp" />

            <TextView
                android:id="@+id/editText2nood"
                android:layout_width="358dp"
                android:layout_height="64dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/please_type_your_withdrawal_reasons"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="181dp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="552dp"
                android:layout_height="168dp"
                android:ems="10"
                android:inputType="textMultiLine"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="254dp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="468dp"
                android:layout_height="58dp"
                android:text="@string/i_endorse_the_data_filled_above_and_i_would_like_to_withdrawal"
                tools:layout_editor_absoluteX="34dp"
                tools:layout_editor_absoluteY="473dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button29nood"
                android:layout_width="220dp"
                android:layout_height="54dp"
                android:text="@string/submit_the_request"
                android:background="@color/color2"
                tools:layout_editor_absoluteX="43dp"
                tools:layout_editor_absoluteY="598dp"
                tools:ignore="MissingConstraints"/>

            <Button
                android:id="@+id/button30nood"
                android:layout_width="107dp"
                android:layout_height="48dp"
                android:text="@string/cancel"
                android:background="@color/color2"
                tools:layout_editor_absoluteX="395dp"
                tools:layout_editor_absoluteY="598dp"
                tools:ignore="MissingConstraints"/>



        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>